# group-detection

./: .gitignore
src/: CMakeLists.txt  Connection.cpp  Connection.h  Encounter.cpp  Encounter.h  Group.cpp  Group.h  GroupDetection.cpp  GroupDetection.h  GroupMember.cpp  GroupMember.h  Node.cpp  Node.h  Simulator.cpp  Simulator.h  UnifiedGroup.cpp  UnifiedGroup.h  extensions.h  main.cpp
tests/: CMakeLists.txt  Connection_tests.cpp  GroupDetection_tests.cpp  GroupMember_tests.cpp  Group_tests.cpp  Node_test.cpp  extensions_tests.cpp  main.cpp
